Fix annoying vertical align issues with text
Turns out that Bootstrap was default to `system-ui`, which defaults to Segoe UI, which is off-center. Roboto works well for the heading, but less for the regular text, so I decided to go with Work Sans.

--- a/src/scss/_heading.scss
+++ b/src/scss/_heading.scss
@@ -21,7 +21,7 @@ header {
     color: $header-color;
     font-family: $header-font;
     font-size: 22px;
-    font-weight: 500;
+    font-weight: 600;
 
     &:hover {
       color: $header-color;
@@ -29,7 +29,7 @@ header {
   }
 
   .logo {
-    margin-right: .375rem;
+    margin-right: .5rem;
     width: 36px;
   }
 
