--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,13 +3,17 @@
 // --------------------------------------------------
 
 $primary: #a26638;
-$app-width: 980px;
 $border-radius: 2px;
+$app-width: 980px;
+
+// Note that Window's crappy Segoe UI font is off-center, causing vertical alignment issues
+// Looking at you, Bootstrap, who likes to default to system-ui
+$font-family-base: "Work Sans", "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 $header-bg: #fefcfb;
 $header-color: #212529;
 $header-border-color: $primary;
-$header-font: "Roboto", sans-serif;
+$header-font: $font-family-base;
 
 $accordion-border-color: lighten($primary, 25%);
 
